--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	</head>
 	<body>
 	<div>
-		<div class="pink"></div>
-		<div class="blue"></div>
+		<div class="pink"><div class="blue"></div></div>
+		
 		<div class="green"></div>
 	</div>
 	</body>
