--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 	</head>
 	<body>
 	<div>
-		<div class="pink"><div class="blue"></div></div>
-		
+		<div class="pink"></div>
+		<div class="blue"></div>
 		<div class="green"></div>
+		<div class="yellow"></div>
+		
 	</div>
 	</body>
 </html>
