--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<body>
 	<div>
 		<div class="pink"></div>
-		<div class="blue"></div>
-		<div class="green"></div>
+		<div class="green">
+			<div class="blue"></div>
+		</div>
 		<div class="yellow"></div>
 		
 	</div>
